--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>El Geladon</title>
-    <link rel="stylesheet" href="./assets/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./assets/style.css" />
+  </head>
+
+  <body>
     <div class="Home">
-        <div class="Home__header Header">
+      <div class="Home__header Header">
         <div class="row">
           <div class="Header__logo Logo">
             <img
@@ -35,53 +36,79 @@
       </div>
       <h2>Pesquisar Paleta</h2>
       <div class="paleta-escolhida-espaco">
-          <div id="paleta-escolhida-input-espaco">
-              <input type="text" id="idPaleta" placeholder="Digite o ID da paleta e clique em 'Escolher'" />
-              <button id="idPaletaButton" onclick="findPaletaById()">ESCOLHER</button>
-          </div>
-          <div>
-
-          </div>
-      </div>
-        <div id="paletaEscolhida">
-
+        <div id="paleta-escolhida-input-espaco">
+          <input
+            type="text"
+            id="idPaleta"
+            placeholder="Digite o ID da paleta e clique em 'Escolher'"
+          />
+          <button id="idPaletaButton" onclick="findPaletaById()">
+            ESCOLHER
+          </button>
         </div>
 
-        <section class="button-modal-create">
-          <button type="button" class="default-button" onclick="abrirModalCadastro()">Cadastrar Paleta</button>
-        </section>
+        <div></div>
+      </div>
+      <div id="paletaEscolhida"></div>
 
-      <section class="modal-overlay" id="overlay">
-
-          <div class="modal">
-
-              <div class="modal-header">
-                  <h2 id="title-header-modal">Cadastrar Paleta</h2>
-                  <a onclick="fecharModalCadastro()" class="close-modal">x</a>
-              </div>
-
-              <div class="modal-body">
-                  <div>
-                      <input type="hidden" id="id">
-                      <input type="text" name="sabor" id="sabor" placeholder="Sabor da Paleta">
-                      <input type="number" name="preco" id="preco" placeholder="Preço da Paleta">
-                      <textarea type="text" name="descricao" id="descricao" placeholder="Descrição da Paleta"
-                          rows="5"></textarea>
-                      <input type="text" name="foto" id="foto" placeholder="Link da Foto da Paleta">
-                      <button id="button-form-modal" onclick="createPaleta()">Cadastrar</button>
-                  </div>
-              </div>
-          </div>
+      <section class="button-modal-create">
+        <button
+          type="button"
+          class="default-button"
+          onclick="abrirModalCadastro()"
+        >
+          Cadastrar Paleta
+        </button>
       </section>
 
-        
-        <h2>Paletas Disponíveis:</h2>
-        <div class="Home__container">
-          <div class="PaletaLista" id="paletaList">
+      <section class="modal-overlay" id="overlay">
+        <div class="modal">
+          <div class="modal-header">
+            <h2 id="title-header-modal">Cadastrar Paleta</h2>
+            <a onclick="fecharModalCadastro()" class="close-modal">x</a>
+          </div>
 
+          <div class="modal-body">
+            <div>
+              <input type="hidden" id="id" />
+              <input
+                type="text"
+                name="sabor"
+                id="sabor"
+                placeholder="Sabor da Paleta"
+              />
+              <input
+                type="number"
+                name="preco"
+                id="preco"
+                placeholder="Preço da Paleta"
+              />
+              <textarea
+                type="text"
+                name="descricao"
+                id="descricao"
+                placeholder="Descrição da Paleta"
+                rows="5"
+              ></textarea>
+              <input
+                type="text"
+                name="foto"
+                id="foto"
+                placeholder="Link da Foto da Paleta"
+              />
+              <button id="button-form-modal" onclick="createPaleta()">
+                Cadastrar
+              </button>
+            </div>
           </div>
         </div>
+      </section>
+
+      <h2>Paletas Disponíveis:</h2>
+      <div class="Home__container">
+        <div class="PaletaLista" id="paletaList"></div>
       </div>
+    </div>
     <script src="./assets/script.js"></script>
-</body>
+  </body>
 </html>
